# full_stack_anchor_voting_system

./: Anchor.toml  README.md  package-lock.json  package.json  server.js  server.ts
app/: package-lock.json  package.json  vite.config.ts
app/src/: App.tsx
app/src/components/ui/: CreateVote.tsx  VoteItem.tsx  VoteRegistry.tsx  VoteSelection.tsx  content.tsx  header.tsx
programs/opika_voting_system/: Cargo.toml
programs/opika_voting_system/src/: lib.rs
scripts/: data_program_keypair.json  firstTx.ts  helpers.ts  main_wallet.json  opika_voting_system-keypair.json  opika_voting_system.json  recover.json
scripts/Idl/: opika_voting_system.ts
services/: vote.js  vote.ts
tests/: opika_voting_system.ts
validations/: voteVS.js  voteVS.ts
